# book-smith-ai

./: .pre-commit-config.yaml  README.md  prompt_to_book.py  pyproject.toml
book_smith_ai/: module.py
docs/: Automated Book Generation Workflow_ From Prompt to.md
src/book_smith_ai/: module.py
tests/: book_concept_test_1.json  test_module.py
