[project]
name = "book-smith-ai"
version = "0.1.0"
description = "A Python tool that accepts a book idea, then turn that idea into a full-length novel at the speed of LLM."
authors = [
    {name = "John Weldon",email = "john.weldon117@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.4,<3.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
black = "^25.1.0"
autopep8 = "^2.3.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
