[project]
name = "book-smith-ai"
version = "0.1.0"
description = "A Python tool that accepts a book idea, then turn that idea into a full-length novel at the speed of LLM."
authors = [
    {name = "John Weldon",email = "john.weldon117@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.4,<3.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
black = "^25.1.0"
autopep8 = "^2.3.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 72
target-version = ['py310']
skip-string-normalization = false

[tool.isort]
profile = "black"           # Ensure isort is black-compatible
line_length = 72            # Match black's line length
multi_line_output = 3       # Vertical Hanging Indent, matches black
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.autopep8]
max_line_length = 72

